--- a/my-app/src/components/CurrenciesList/CurrenciesList.module.css
+++ b/my-app/src/components/CurrenciesList/CurrenciesList.module.css
@@ -1,38 +1,50 @@
 .currencyRow {
-  flex: 100%;
   display: flex;
+  flex: 1 1 100%;
+  flex-wrap: wrap;
   padding-left: 10px;
 }
 
 .gridMain {
-  grid-column: 1 / 3;
-  grid-row: 3 / 13;
   background: #fff;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
 
 .currencyCell {
-  flex: 50%;
-  width: 100%;
-  text-align: left;
   margin: auto;
   font-weight: 700;
 }
+.currencyCellLeft {
+  width: 65%;
+}
+.currencyCellRight {
+  text-align: center;
+  width: 35%;
+}
 
 .gridFooter {
-  grid-column: 1 / 3;
   margin: auto;
   background: #fff;
 }
 
 .item {
   padding-left: 10px;
+  width: 100%;
 }
 
 .currenciesBtn {
   all: unset;
+  width: 65%;
 }
-.currenciesBtn:hover {
+.currenciesBtn,
+.currencyCellRight:hover {
   cursor: pointer;
+}
+
+@media (max-width: 500px) {
+  .item {
+    padding-left: 5px;
+  }
 }
