--- a/my-app/src/components/Header/Header.module.css
+++ b/my-app/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 .p {
   position: absolute;
-  top: 0;
+  top: 1;
   right: 0;
-  margin-right: 10px;
+
+  margin-right: 20px;
 }
 .headerIcon {
   text-align: end;
@@ -10,10 +11,31 @@
 }
 .headerToolbar {
   position: relative;
-  padding: 0;
-  margin: 0;
+
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.headerBox {
+  position: sticky;
+  top: 0px;
+  margin-top: 0 !important;
+  z-index: 1;
+}
+
+@media (max-width: 600px) {
+  .headerIcon {
+    position: absolute;
+    top: 1;
+    left: 0;
+
+    margin-left: 20px;
+  }
+  .headerTitle {
+    width: 70%;
+    text-align: center;
+  }
 }
