--- a/my-app/src/components/PageCard/PageCard.module.css
+++ b/my-app/src/components/PageCard/PageCard.module.css
@@ -1,9 +1,33 @@
 .pageCard {
-  width: 50%;
-  min-width: 300px;
   display: flex;
+  flex-direction: column;
+  justify-content: start;
+  min-height: fit-content;
+  width: 50%;
   margin: 10px auto;
-  justify-content: center;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px #fff,
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  padding-bottom: 20px;
+  overflow: unset !important;
+}
+.pageCardTitle,
+.pageCardDescription {
+  text-align: center;
+}
+
+.pageCardContent {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: fit-content;
+}
+
+@media screen and (max-width: 700px) {
+  .pageCard {
+    width: 75%;
+  }
+}
+@media (max-width: 500px) {
+  .pageCard {
+    width: 100%;
+  }
 }
