--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -4,8 +4,26 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.MuiPagination-root {
+  display: flex;
+  justify-content: center;
+}
+
+html {
+  height: 100%;
+}
+#root {
+  height: 100%;
+}
+@media (min-height: 1000px) {
+  #root {
+  }
 }
