--- a/my-app/src/pages/RatesPage/RatesPage.module.css
+++ b/my-app/src/pages/RatesPage/RatesPage.module.css
@@ -1,60 +1,44 @@
 .tableContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin: auto;
-  height: 75%;
+  width: calc(100% - 4px);
+  margin: 0 auto 0 auto;
 }
 .ratesTable {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(13, 1fr);
-  width: 50%;
+  width: 100%;
+  border: 2px solid #000;
 }
 .gridHeader {
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
-}
-
-.gridHeader {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
+
 .headerCell {
-  flex: 50%;
-  width: 100%;
-  text-align: left;
+  text-align: center;
   margin: auto;
   font-weight: 700;
 }
+.headerCellLeft {
+  width: 65%;
+}
+.headerCellRight {
+  width: 35%;
+}
 .headers,
 .current {
-  flex: 100%;
   display: flex;
   padding-left: 10px;
 }
 
 .headers {
-  background: rgb(243, 243, 144);
+  flex: 1 1 100%;
   padding: 5px 0 5px 10px;
+  background: rgb(243, 243, 144);
 }
 
-.current {
-  color: #000;
-  background: #fff;
-  justify-content: center;
-}
-.autocomplete {
-  padding-top: 10px;
-  padding-right: 10px;
-}
-
-.gridFooter {
-  grid-column: 1 / 3;
-  margin: auto;
-}
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 701px) {
   .ratesTable {
     width: 50% !important;
   }
