--- a/my-app/src/components/ConvertField/ConvertField.module.css
+++ b/my-app/src/components/ConvertField/ConvertField.module.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin: 0 auto 0 auto;
-  margin-top: 30px;
+  margin: 10px auto 10px auto;
   padding: 20px 20px 10px 20px;
 }
 
