--- a/my-app/src/components/PageCard/PageCard.module.css
+++ b/my-app/src/components/PageCard/PageCard.module.css
@@ -7,7 +7,6 @@
   margin: 10px auto;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px #fff,
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  padding-bottom: 20px;
   overflow: unset !important;
 }
 .pageCardTitle,
@@ -19,6 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   min-height: fit-content;
+  justify-content: center;
 }
 
 @media screen and (max-width: 700px) {
