--- a/my-app/src/components/NavBar/NavBar.module.css
+++ b/my-app/src/components/NavBar/NavBar.module.css
@@ -1,14 +1,16 @@
-.btn {
-  background-color: #000 !important;
-  color: #fff !important;
-  width: 300px;
-  height: 50px;
+.navGroup {
+  margin-top: 10px;
 }
 
-.btn:hover {
-  background: #fff !important;
-  color: #000 !important;
-}
 .navBtn {
-  margin-top: 10px;
+  width: 300px;
+  height: 50px;
+
+  color: #fff !important;
+  background-color: #000 !important;
+}
+
+.navBtn:hover {
+  color: #000 !important;
+  background: #fff !important;
 }
