--- a/my-app/src/components/RatesAutocomplete/RatesAutocomplete.module.css
+++ b/my-app/src/components/RatesAutocomplete/RatesAutocomplete.module.css
@@ -1,18 +1,24 @@
-.current {
+.ratesAutocomplete {
   display: flex;
   flex: 1 1 100%;
+
   padding-left: 2px;
 
   color: #000;
   background: #fff;
 }
-.autocomplete {
-  padding-top: 10px;
+
+.ratesAutocompleteSelect {
   flex: 1 1 65%;
+
+  padding-top: 10px;
 }
-.autocompleteValue {
+
+.ratesAutocompleteValue {
   flex: 1 1 35%;
+
   margin: auto 0 auto 0;
+
   font-weight: 700;
   text-align: center;
 }
