--- a/frontend/src/Pages/RatesPage/RatesPage.module.css
+++ b/frontend/src/Pages/RatesPage/RatesPage.module.css
@@ -1,16 +1,10 @@
-.ratesPageContainer {
+.ratesPageTable {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  width: calc(100% - 4px);
-
-  margin: 0 auto 0 auto;
-}
-
-.ratesPageTable {
   width: 50%;
-
+  max-width: calc(100% - 4px);
+  margin: 0 auto 0 auto;
   margin-bottom: 10px;
 
   border: 2px solid #000;
@@ -47,13 +41,19 @@
   width: 35%;
 }
 
-@media screen and (max-width: 750px) {
+@media (min-height: 800px) {
+  .ratesPageTable {
+    margin-top: auto;
+  }
+}
+
+@media (max-width: 750px) {
   .ratesPageTable {
     width: 75%;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media (max-width: 500px) {
   .ratesPageTable {
     width: 100%;
   }
