--- a/frontend/src/components/ConverterField/ConverterField.module.css
+++ b/frontend/src/components/ConverterField/ConverterField.module.css
@@ -12,7 +12,7 @@
 .convertFieldFrom,
 .convertFieldTo {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 
   margin-bottom: 1rem;
 
