--- a/frontend/src/components/PageCard/PageCard.module.css
+++ b/frontend/src/components/PageCard/PageCard.module.css
@@ -1,7 +1,7 @@
 .pageCard {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 
   min-height: fit-content;
   width: 50%;
